Accept drag and drop in Open Dialog

acceptDrops is some how set on my machine. However,
Qt docs indicate it is false by default.
Make sure it always gets set.

BUG:417189
FIXED-IN:1.8.4